--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         <div class="container">
             <h2 class="indexTitles">Qui suis-je ?</h2>
             <div class="displayFlexBetween flexWrap ">
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="reveal alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp" src="img/portrait2.png" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <div class="name textCenter">
+                    <div class="revealTwo name textCenter">
                         <h3 class="subTitle yellowFont">Marco Da Silva</h3>
                         <h4>Développeur Web junior</p>
                     </div>
-                    <p class="textJustify">Admis à l'<span class="yellowFont">EPSI</span>, école d'ingénierie informatique, de Bordeaux en parcours <span class="yellowFont">devOps</span>, je recherche une <span class="yellowFont">alternance</span> pour la rentrée de Septembre 2020.</p>
-                    <p class="textJustify">Récemment détenteur d'un diplôme <span class="yellowFont">développeur web et web mobile</span>, titre RNCP niveau III (Bac +2).</p>
-                    <p class="textJustify">Appliqué, curieux et déterminé je suis très motivé pour partager avec vous une belle histoire professionnelle main dans la main.</p>
-                    <p class="textJustify">Fort de ma formation intensive à La Piscine, à Mérignac (33), et de mon apprentissage en auto-didacte je suis prêt à relever tous les challenges en équipe qu'on pourrait me confier toujours dans la bonne humeur.</p>
+                    <p class="revealTwo textJustify">Admis à l'<span class="yellowFont">EPSI</span>, école d'ingénierie informatique, de Bordeaux en parcours <span class="yellowFont">devOps</span>, je recherche une <span class="yellowFont">alternance</span> pour la rentrée de Septembre 2020.</p>
+                    <p class="revealTwo textJustify">Récemment détenteur d'un diplôme <span class="yellowFont">développeur web et web mobile</span>, titre RNCP niveau III (Bac +2).</p>
+                    <p class="revealTwo textJustify">Appliqué, curieux et déterminé je suis très motivé pour partager avec vous une belle histoire professionnelle main dans la main.</p>
+                    <p class="revealTwo textJustify">Fort de ma formation intensive à La Piscine, à Mérignac (33), et de mon apprentissage en auto-didacte je suis prêt à relever tous les challenges en équipe qu'on pourrait me confier toujours dans la bonne humeur.</p>
                 </div>
             </div>
         </div>
@@ -76,19 +76,19 @@
             <h2 class="indexTitles">Projets</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <div class="textCenter">
+                    <div class="reveal textCenter">
                         <h3 class="yellowFont subTitle">projets éffectués</h3>
                     </div>
-                    <p>Conception full-stack d'un blog sous Symfony</p>
-                    <p>Rédaction d'un dossier de projet</p>
-                    <p>Création d'un logo</p>
-                    <p>Apprentissage auto-didacte du javascript vanilla</p>
-                    <p>Complétion du tuto "Morpion" React.js</p>
-                    <div class="btnAlign">
+                    <p class="reveal">Conception full-stack d'un blog sous Symfony</p>
+                    <p class="reveal">Rédaction d'un dossier de projet</p>
+                    <p class="reveal">Création d'un logo</p>
+                    <p class="reveal">Apprentissage auto-didacte du javascript vanilla</p>
+                    <p class="reveal">Complétion du tuto "Morpion" React.js</p>
+                    <div class="reveal btnAlign">
                         <p class="btn"><a href="portfolio.html">Voir les projets</a></p>
                     </div>
                 </div>
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="revealTwo alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp portfolio" src="img/dino.png" alt="portrait de marco da silva">
                 </div>
             </div>
@@ -105,21 +105,21 @@
         <div class="container">
             <h2 class="indexTitles">Curriculum vitæ</h2>
             <div class="displayFlexBetween flexWrap">
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="reveal alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp cv" src="img/cv.PNG" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <div class="textCenter">
+                    <div class="revealTwo textCenter">
                         <h3 class="yellowFont subTitle">Version août 2020</h3>
                     </div>
-                    <p>Format totalement original (A4)</p>
-                    <p>Peut servir de brouillon</p>
-                    <p>Peut aussi bien être exposé sur un mur</p>
-                    <p>Téléchargement gratuit</p>
-                    <p>Téléchargement premium à 0€</p>
-                    <p>Téléchargement de la photo seule possible</p>
-                    <p class="blur">Attention, regarder ce CV pendant quelques heures d'affilé peut provoquer une vue floue.</p>
-                    <div class="btnAlign">
+                    <p class="revealTwo">Format totalement original (A4)</p>
+                    <p class="revealTwo">Peut servir de brouillon</p>
+                    <p class="revealTwo">Peut aussi bien être exposé sur un mur</p>
+                    <p class="revealTwo">Téléchargement gratuit</p>
+                    <p class="revealTwo">Téléchargement premium à 0€</p>
+                    <p class="revealTwo">Téléchargement de la photo seule possible</p>
+                    <p class="revealTwo blur">Attention, regarder ce CV pendant quelques heures d'affilé peut provoquer une vue floue.</p>
+                    <div class="revealTwo btnAlign">
                         <p class="btn"><a target="_blank" href="img/marcoDaSilvaCv.pdf">Télécharger le cv</a></p>
                     </div>
                 </div>
@@ -139,25 +139,25 @@
             <div class="displayFlexBetween flexWrap ">
                 <div class="bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <div class="indexInfos">
-                        <div class="textCenter">
+                        <div class="reveal textCenter">
                             <h3 class="yellowFont subTitle">Ready To Work</h3>
                         </div>
-                        <div class="adress">
+                        <div class="reveal adress">
                             <p>11, Rue Batailley</p>
                             <p>33 000 Bordeaux</p>
                             <p>FRANCE</p>
                         </div>
-                        <div class="btnAlign">
+                        <div class="reveal btnAlign">
                             <p class="btn"><a href="tel:0628542231">06 28 54 22 31</a></p>
                         </div>
-                        <div class="btnAlign">
+                        <div class="reveal btnAlign">
                             <p class="btn"><a href="mailto:tdasilva.marco@gmail.com">tdasilva.marco@gmail.com</a></p>
                         </div>
-                        <div class="social">
+                        <div class="reveal social">
                             <div class="bDesktop2 desktop2 lDesktop2 bTablet2 tablet2 phone2">
                                 <a href="https://www.linkedin.com/in/marco-da-silva-51b99019b/"><img class="imgResp" src="img/linkedin.png" alt="lien vers le site linkedIn" /></a>
                             </div>
-                            <div class="bDesktop2 desktop2 lDesktop2 bTablet2 tablet2 phone2">
+                            <div class="reveal bDesktop2 desktop2 lDesktop2 bTablet2 tablet2 phone2">
                                 <a href="https://github.com/CoquinhoDaSilva/"><img class="imgResp" src="img/github.png" alt="lien vers le site github" /></a>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </div>
-        <div class="profil bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+        <div class="revealTwo profil bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
             <img class="imgResp" src="img/profile.png" alt="photo de marco da silva">
         </div>
     </section>
@@ -196,10 +196,27 @@
             <li><a href="#portfolio">Projets</a></li>
             <li><a href="#cv">CV</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
-            <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
-            <li><a href="legal.html">Mentions légales</a></li>
         </ul>
+        <p class="contactMe textCenter yellowFont">Contactez moi</p>
+        <div class="displayFlexAround">
+            <div class="tablet2 phone3">
+                <a href="tel:0628542231">
+                    <div>
+                        <img class="imgResp" alt="logo téléphone pour appeler" src="img/phone.png">
+                    </div>
+                </a>
+            </div>
+            <div class="tablet2 phone3">
+                <a href="mailto:tdasilva.marco@gmail.com">
+                    <div>
+                        <img class="imgResp" alt="logo mail pour envoyer un mail" src="img/mail.png">
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="menuRespOut">
+        
     </div>
     <script type="text/javascript" src="scripts/index.js"></script>
 </body>
