--- a/portfolio.html
+++ b/portfolio.html
@@ -36,21 +36,21 @@
             <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Création d'un blog sous Symfony 5</h2>
+            <h2 class="reveal portfolioTitles yellowFont textCenter">Création d'un blog sous Symfony 5</h2>
             <div class="displayFlexBetween flexWrap">
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Création d’un cahier des charges</p>
-                    <p>Conception d’une base de données liée aux besoins <span class="yellowFont">(MCD, MLD)</span></p>
-                    <p>Création d’une charte graphique et d’un logo</p>
-                    <p>Maquettage du site <span class="yellowFont">(FIGMA)</span></p>
-                    <p>Conception Back-end <span class="yellowFont">(Framework SYMFONY avec PHPSTORM, SQL)</span></p>
-                    <p>Intégration Front-end après retours client <span class="yellowFont">(HTML, SASS, TWIG)</span></p>
-                    <p>Rédaction d'un dossier de projet contenant toutes les étapes et code</p>
-                    <div class="btnAlign">
+                    <p class="reveal">Création d’un cahier des charges</p>
+                    <p class="reveal">Conception d’une base de données liée aux besoins <span class="yellowFont">(MCD, MLD)</span></p>
+                    <p class="reveal">Création d’une charte graphique et d’un logo</p>
+                    <p class="reveal">Maquettage du site <span class="yellowFont">(FIGMA)</span></p>
+                    <p class="reveal">Conception Back-end <span class="yellowFont">(Framework SYMFONY avec PHPSTORM, SQL)</span></p>
+                    <p class="reveal">Intégration Front-end après retours client <span class="yellowFont">(HTML, SASS, TWIG)</span></p>
+                    <p class="reveal">Rédaction d'un dossier de projet contenant toutes les étapes et code</p>
+                    <div class="reveal btnAlign">
                         <p class="btn"><a target="_blank" href="img/marcoDaSilvaDossier.pdf">Télécharger le dossier</a></p>
                     </div>
                 </div>
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="revealTwo alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="sizeImgPort imgResp" src="img/leymarie.png" alt="portrait de marco da silva">
                 </div>
             </div>
@@ -66,16 +66,16 @@
             <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Création de logo</h2>
+            <h2 class="reveal portfolioTitles yellowFont textCenter">Création de logo</h2>
             <div class="displayFlexBetween flexWrap">
-                <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Visualisation des couleurs utilisables (respectant ma charte graphique)</p>
-                    <p>Recherche de logos fonctionnels</p>
-                    <p>Utilisation de mes initiales pour un logo simple et reconnaissable</p>
-                    <p>Imbriquation d'un slogan sur ce même logo</p>
-                    <p>Dessin sur papier puis demande à un graphiste <span class="yellowFont">(Nina Levesque)</span></p>
+                <div class="reveal indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                    <p class="reveal">Visualisation des couleurs utilisables (respectant ma charte graphique)</p>
+                    <p class="reveal">Recherche de logos fonctionnels</p>
+                    <p class="reveal">Utilisation de mes initiales pour un logo simple et reconnaissable</p>
+                    <p class="reveal">Imbriquation d'un slogan sur ce même logo</p>
+                    <p class="reveal">Dessin sur papier puis demande à un graphiste <span class="yellowFont">(Nina Levesque)</span></p>
                 </div>
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="revealTwo alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp" src="img/logosPortfolio.png" alt="portrait de marco da silva">
                 </div>
             </div>
@@ -91,17 +91,17 @@
             <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Apprentissage du Javascript</h2>
+            <h2 class="reveal portfolioTitles yellowFont textCenter">Apprentissage du Javascript</h2>
             <div class="displayFlexBetween flexWrap">
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="reveal alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp sizeImgPort" src="img/toutjavascript.jpeg" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Achat du livre "<span class="yellowFont">TOUT JAVASCRIPT</span>" par Olivier Hondermarck</p>
-                    <p>Lecture de chaque chapitres jusqu'à compréhension et annotations</p>
-                    <p>Essais pratiques</p>
-                    <p>Envie d'approfondissement du langage</p>
-                    <p>Recherche de tutos afin de mieux comprendre la mise en pratique</p>
+                    <p class="revealTwo">Achat du livre "<span class="yellowFont">TOUT JAVASCRIPT</span>" par Olivier Hondermarck</p>
+                    <p class="revealTwo">Lecture de chaque chapitres jusqu'à compréhension et annotations</p>
+                    <p class="revealTwo">Essais pratiques</p>
+                    <p class="revealTwo">Envie d'approfondissement du langage</p>
+                    <p class="revealTwo">Recherche de tutos afin de mieux comprendre la mise en pratique</p>
                 </div>
             </div>
         </div>
@@ -116,16 +116,16 @@
             <a href="#gameboard"><p></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Tuto React.js (Morpion)</h2>
+            <h2 class="reveal portfolioTitles yellowFont textCenter">Tuto React.js (Morpion)</h2>
             <div class="displayFlexBetween flexWrap">
-                <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Recherche d'un framework après la lecture du livre</p>
-                    <p>Choix du framework front React.js</p>
-                    <p>Recherche de la documentation</p>
-                    <p><span class="yellowFont">Complétion du tuto</span> de la documentation</p>
-                    <p><span class="yellowFont">Création d'un jeu</span> Morpion</p>
+                <div class="reveal indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                    <p class="reveal">Recherche d'un framework après la lecture du livre</p>
+                    <p class="reveal">Choix du framework front React.js</p>
+                    <p class="reveal">Recherche de la documentation</p>
+                    <p class="reveal"><span class="yellowFont">Complétion du tuto</span> de la documentation</p>
+                    <p class="reveal"><span class="yellowFont">Création d'un jeu</span> Morpion</p>
                 </div>
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="revealTwo alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp sizeImgPort" src="img/morpion.png" alt="portrait de marco da silva">
                 </div>
             </div>
@@ -142,18 +142,18 @@
             <a href="#gameboard"><p class="where"></p></a>
         </div>
         <div class="container">
-            <h2 class="portfolioTitles yellowFont textCenter">Création d'un jeu de société physique et numérique (Work in Progress)</h2>
+            <h2 class="reveal portfolioTitles yellowFont textCenter">Création d'un jeu de société physique et numérique (Work in Progress)</h2>
             <div class="displayFlexBetween flexWrap">
-                <div class="alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
+                <div class="reveal alignImg bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
                     <img class="imgResp sizeImgPort" src="img/theMrew.jpg" alt="portrait de marco da silva">
                 </div>
                 <div class="indexInfos order bDesktop5 desktop5 lDesktop5 bTablet5 tablet12 phone12">
-                    <p>Choix d'un gameplay</p>
-                    <p>Création d'un univers</p>
-                    <p>Choix d'une charte graphique</p>
-                    <p>Utilisation de l'outil <span class="yellowFont">illustrator</span> pour la structure des cartes</p>
-                    <p>Conception d'une carte de jeu (WIP)</p>
-                    <p>Ecriture d'un scénario à embranchements multiples (WIP)</p>
+                    <p class="revealTwo">Choix d'un gameplay</p>
+                    <p class="revealTwo">Création d'un univers</p>
+                    <p class="revealTwo">Choix d'une charte graphique</p>
+                    <p class="revealTwo">Utilisation de l'outil <span class="yellowFont">illustrator</span> pour la structure des cartes</p>
+                    <p class="revealTwo">Conception d'une carte de jeu (WIP)</p>
+                    <p class="revealTwo">Ecriture d'un scénario à embranchements multiples (WIP)</p>
                 </div>
             </div>
         </div>
@@ -186,11 +186,29 @@
             <li><a href="index.html#portfolio">Projets</a></li>
             <li><a href="index.html#cv">CV</a></li>
             <li><a href="index.html#contact">Contact</a></li>
-            <li><a class="yellowFont" href="tel:0628542231">Téléphoner</a></li>
-            <li><a class="yellowFont" href="mailto:tdasilva.marco@gmail.com">Envoyer un mail</a></li>
-            <li><a href="legal.html">Mentions légales</a></li>
         </ul>
+        <p class="contactMe textCenter yellowFont">Contactez moi</p>
+        <div class="displayFlexAround">
+            <div class="tablet2 phone3">
+                <a href="tel:0628542231">
+                    <div>
+                        <img class="imgResp" alt="logo téléphone pour appeler" src="img/phone.png">
+                    </div>
+                </a>
+            </div>
+            <div class="tablet2 phone3">
+                <a href="mailto:tdasilva.marco@gmail.com">
+                    <div>
+                        <img class="imgResp" alt="logo mail pour envoyer un mail" src="img/mail.png">
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
-    <script type="text/javascript" src="scripts/portfolio.js"></script>
+
+    <div class="menuRespOut">
+        
+    </div>
+    <script type="text/javascript" src="scripts/legal.js"></script>
 </body>
 </html>
